recipe: Add download_artifact script
Signed-off-by: Jagan Teki <jagan@edgeble.ai>

--- a/recipe.yaml
+++ b/recipe.yaml
@@ -1,4 +1,9 @@
 actions:
+- action: script
+  path: ../download-artifacts.sh
+  cleanup: true
+  chroot: true
+
 - action: debos.actions.Debos
   recipe: ../debos/ospack.yaml
 
