--- a/recipe.yaml
+++ b/recipe.yaml
@@ -1,19 +1,23 @@
-actions:
-- action: script
-  path: ../download-artifacts.sh
-  cleanup: true
-  chroot: true
+# recipe.yaml
 
-- action: debos.actions.Debos
+architecture: amd64
+
+actions:
+- action: run
+  description: Download artifacts
+  chroot: true
+  script: ../debos/download-artifacts.sh
+
+- action: recipe
   recipe: ../debos/ospack.yaml
 
-- action: debos.actions.Debos
+- action: recipe
   recipe: ../debos/osvideopack.yaml
   multi_cam_rkaiq: "true"
 
-- action: debos.actions.Debos
+- action: recipe
   recipe: ./osmodelpack.yaml
 
-- action: debos.actions.Debos
+- action: recipe
   recipe: ../debos/image.yaml
   osinpack: "osmodelpack"
