--- a/osmodelpack.yaml
+++ b/osmodelpack.yaml
@@ -28,6 +28,13 @@ actions:
     destination: /
 
   - action: run
+    description: Install camera-engine-rkaiq
+    chroot: true
+    command: |
+      set -e
+      dpkg -i /packages/camera-engine-rkaiq_3.0.2_arm64.deb
+
+  - action: run
     description: Install libsdl2
     chroot: true
     command: |
@@ -49,8 +56,8 @@ actions:
     command: |
       set -e
 
-      cp /packages/rknn/librknnrt.so /usr/lib/aarch64-linux-gnu
-      cp /packages/rknn/sdl2-cam /usr/bin
+      cp -v /packages/rknn/librknnrt.so /usr/lib/aarch64-linux-gnu
+      cp -v /packages/rknn/sdl2-cam /usr/bin
       cp -rf /packages/rknn/model /home/openaia
       cp -v /packages/scripts/openaia-od-* /usr/bin
 
