--- a/osmodelpack.yaml
+++ b/osmodelpack.yaml
@@ -24,42 +24,46 @@ actions:
       - opencv-doc
 
   - action: overlay
-    source: overlays/
-    destination: /
+    description: Packages overlay
+    source: overlays/packages
+    destination: /opt
 
   - action: run
     description: Install camera-engine-rkaiq
     chroot: true
     command: |
       set -e
-      dpkg -i /packages/camera-engine-rkaiq_3.0.2_arm64.deb
+      dpkg -i /opt/camera-engine-rkaiq_3.0.2_arm64.deb
 
   - action: run
     description: Install libsdl2
     chroot: true
     command: |
       set -e
-
-      dpkg -i /packages/libsdl2/*.deb
+      dpkg -i /opt/libsdl2/*.deb
  
   - action: run
     description: Install opencv
     chroot: true
     command: |
       set -e
+      dpkg -i /opt/opencv/*.deb
+      rm -rfv /opt/*
 
-      dpkg -i /packages/opencv/*.deb
- 
-  - action: run
-    description: Install Yolov5 Object detection
-    chroot: true
-    command: |
-      set -e
+  - action: overlay
+    description: Copy Librknnrt
+    source: overlays/usr/lib
+    destination: /usr/lib
 
-      cp -v /packages/rknn/librknnrt.so /usr/lib/aarch64-linux-gnu
-      cp -v /packages/rknn/sdl2-cam /usr/bin
-      cp -rf /packages/rknn/model /home/openaia
-      cp -v /packages/scripts/openaia-od-* /usr/bin
+  - action: overlay
+    description: Copy Object detection model
+    source: overlays/usr/bin
+    destination: /usr/bin
+
+  - action: overlay
+    description: Copy Data annotation
+    source: overlays/home/open
+    destination: /home/open
 
   - action: pack
     description: Pack into tarball
