--- a/recipe.yaml
+++ b/recipe.yaml
@@ -7,6 +7,8 @@ architecture: arm64
 actions:
 - action: recipe
   recipe: ../debos/ospack.yaml
+  variables:
+    hostname: {{ $imgname }}
 
 - action: recipe
   recipe: ../debos/osvideopack.yaml
