recipe: add buildnr
Signed-off-by: Jagan Teki <jagan@edgeble.ai>

--- a/recipe.yaml
+++ b/recipe.yaml
@@ -1,6 +1,7 @@
 # recipe.yaml
 
-{{ $imgname := or .imgname "dummy" }}
+{{ $imgname := or .imgname "6tops" }}
+{{ $buildnr := or .buildnr "b0" }}
 
 architecture: arm64
 
@@ -22,4 +23,4 @@ actions:
   recipe: ../debos/image.yaml
   variables:
     osinpack: osmodelpack
-    imgname: {{ $imgname }}
+    buildnr: {{ $buildnr }}
