overlay: add .bash_aliases
Signed-off-by: Jagan Teki <jagan@edgeble.ai>

--- a/.debug.yaml
+++ b/.debug.yaml
@@ -8,3 +8,8 @@ actions:
   description: Copy root
   source: overlay/root
   destination: /root
+
+- action: overlay
+  description: Copy home
+  source: overlay/home/open
+  destination: /home/open
