--- a/modelpack.yaml
+++ b/modelpack.yaml
@@ -1,7 +1,7 @@
 {{ $architecture := or .architecture "arm64" }}
 {{ $suite := or .suite "bullseye" }}
 {{ $osvideopack := or .osvideopack (printf "osvideopack-%s-%s" $suite $architecture) }}
-{{ $osmodelpack := or .osmodelpack (printf "osmodelpack-%s-%s" $suite $architecture) }}
+{{ $modelpack := or .modelpack (printf "modelpack-%s-%s" $suite $architecture) }}
 
 architecture: {{ $architecture }}
 
@@ -54,4 +54,4 @@ actions:
 
   - action: pack
     description: Pack into tarball
-    file: {{ $osmodelpack }}.tar.gz
+    file: {{ $modelpack }}.tar.gz
